--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -52,7 +52,7 @@
         <a class="item" [routerLinkActive]="['active']" routerLink="/login">
             <i class="sign in icon"></i> Zaloguj
         </a>
-        <a class="item" [routerLinkActive]="['active']" routerLink="/register">
+        <a class="item" [routerLinkActive]="['active']" routerLink="/registration">
             <i class="add user icon"></i> Zarejestruj
         </a>
     </div>
