--- a/application/src/app/components/about/about.component.html
+++ b/application/src/app/components/about/about.component.html
@@ -1,9 +1,18 @@
-<h1>Daj Się Poznać 2017</h1>
-<h5>Projekt rozwijany w ramach konkursu Daj Się Poznać 2017</h5>
-<p>
-    Projekt jest rozwijany jako projekt OpenSource. Pliki i kod projektu jest udostępniony na GitHub.
-</p>
-<p>
-    Ta strona została stworzona jedynie w celach prezentacyjnych. Służy do sprawdzania i przetestowania aplikacji.
-    <br> Nie odpowiadam z wszelkie informacje i dane umieszczane tutaj przez osoby korzystające ze strony.
-</p>
+<div class="ui two column centered grid">
+    <div class="column">
+        <div class="ui segment" style="text-align: justify;">
+            <h1 style="text-align: center;">Daj Się Poznać 2017</h1>
+            <p>
+                <b>Warsztat - Aplikacja internetowa do zarządzania warsztatami samochodowymi.</b>
+            </p>
+            <p>
+                Aplikacja została stworzona w celu uzupełnienia portfolio i nauki nowych technologii (Symfony3, Angular2, Semantic-UI, JSON Web Token). Projekt bierze również udział w konkursie Daj Się Poznać 2017 (<a href="http://uczestnicy.dajsiepoznac.pl/profil/mateusz-cholewka">strona konkursowa projektu</a>), organizowaym przez Macieja Aniserowicza z <a href="http://devstyle.pl/">DevStyle.pl</a>. Wszelkie prace nad projektem, zostały udokumentowane na <a href="http://webmtkblog.wordpress.com/">blogu webmtkblog.wordpress.com</a>, oraz w <a href="https://github.com/mtk3d/warsztat">repozytorium GitHub</a>.
+            </p>
+            <p>
+                <b>Ta strona udostępnia aplikację jedynie w celach prezentacyjnych.</b>
+                <br>
+                <b>Nie odpowiadam z żadne informacje i dane umieszczane tutaj przez osoby korzystające z aplikacji.</b>
+            </p>
+        </div>
+    </div>
+</div>
