--- a/application/src/app/components/about/about.component.html
+++ b/application/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
                 <b>Warsztat - Aplikacja internetowa do zarządzania warsztatami samochodowymi.</b>
             </p>
             <p>
-                Aplikacja została stworzona w celu uzupełnienia portfolio i nauki nowych technologii (Symfony3, Angular2, Semantic-UI, JSON Web Token). Projekt bierze również udział w konkursie Daj Się Poznać 2017 (<a href="http://uczestnicy.dajsiepoznac.pl/profil/mateusz-cholewka">strona konkursowa projektu</a>), organizowaym przez Macieja Aniserowicza z <a href="http://devstyle.pl/">DevStyle.pl</a>. Wszelkie prace nad projektem, zostały udokumentowane na <a href="http://webmtkblog.wordpress.com/">blogu webmtkblog.wordpress.com</a>, oraz w <a href="https://github.com/mtk3d/warsztat">repozytorium GitHub</a>.
+                Aplikacja została stworzona w celu uzupełnienia portfolio i nauki nowych technologii (Symfony3, Angular2, Semantic-UI, JSON Web Token). Projekt bierze również udział w konkursie Daj Się Poznać 2017 (<a href="http://uczestnicy.dajsiepoznac.pl/profil/mateusz-cholewka" target="_blank">strona konkursowa projektu</a>), organizowaym przez Macieja Aniserowicza z <a href="http://devstyle.pl/" target="_blank">DevStyle.pl</a>. Wszelkie prace nad projektem, zostały udokumentowane na <a href="http://webmtkblog.wordpress.com/" target="_blank">blogu webmtkblog.wordpress.com</a>, oraz w <a href="https://github.com/mtk3d/warsztat" target="_blank">repozytorium GitHub</a>.
             </p>
             <p>
                 <b>Ta strona udostępnia aplikację jedynie w celach prezentacyjnych.</b>
