--- a/application/src/app/components/documents/document.add.component.html
+++ b/application/src/app/components/documents/document.add.component.html
@@ -23,7 +23,7 @@
                     <div class="field">
                         <label>Data wystawienia *</label>
                         <div class="field">
-                            <input type="date" name="date" [ngModel]="document.date | date:'y-MM-dd'">
+                            <input type="date" name="date" [ngModel]="document.date | date:'y-MM-dd'"  (ngModelChange)="document.date = $event">
                         </div>
                     </div>
                     <div class="field">
@@ -53,7 +53,7 @@
                     <div class="field">
                         <label>Data płatności *</label>
                         <div class="field">
-                            <input type="date" name="dateOfPayment" [ngModel]="document.dateOfPayment  | date:'y-MM-dd'">
+                            <input type="date" name="dateOfPayment" [ngModel]="document.dateOfPayment  | date:'y-MM-dd'"  (ngModelChange)="document.dateOfPayment  = $event">
                         </div>
                     </div>
                     <div class="field">
