Order to document

--- a/application/src/app/components/orders/order.component.html
+++ b/application/src/app/components/orders/order.component.html
@@ -8,7 +8,7 @@
             <consumer-input [consumerId]=consumerId (consumerOutput)="setConsumerId($event)"></consumer-input>
         </div>
         <div class="document-buttons">
-            <div class="ui blue labeled icon button tiny" (click)="true">
+            <div class="ui blue labeled icon button tiny" [routerLink]="['/ordertodocument', id]">
                 <i class="file outline icon"></i> Utwórz dokument
             </div>
         </div>
