--- a/application/src/app/components/services/services.component.html
+++ b/application/src/app/components/services/services.component.html
@@ -93,6 +93,15 @@
                 </td>
             </ng-container>
         </tr>
+    </tbody>
+    <tbody *ngIf="!isReturn() && !showAdd">
+        <tr>
+            <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
+                Nie znaleziono
+            </td>
+        </tr>
+    </tbody>
+    <tbody>
         <tr *ngIf="showAdd">
             <td style="text-align: center;">
             </td>
@@ -129,13 +138,6 @@
             <td class="collapsing">
                 <div class="ui  green icon button mini" (click)="addNewService()"><i class="checkmark icon"></i></div>
                 <div class="ui  red icon button mini" (click)="showAdd = false"><i class="remove icon"></i></div>
-            </td>
-        </tr>
-    </tbody>
-    <tbody *ngIf="!isReturn()">
-        <tr>
-            <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
-                Nie znaleziono
             </td>
         </tr>
     </tbody>
