--- a/application/src/app/components/orders/orders.component.html
+++ b/application/src/app/components/orders/orders.component.html
@@ -78,7 +78,7 @@
     <tfoot>
         <tr>
             <th colspan="8">
-                <button class="ui  red labeled icon button" [disabled]="isDelete()" (click)="deleteChecked()">
+                <button class="ui  red labeled icon button" [disabled]="isDelete() || deleteLoading" [ngClass]="{'loading': deleteLoading}" (click)="deleteChecked()">
                     <i class="trash icon"></i> Usuń
                 </button>
                 <div class="ui right floated pagination menu small">
