API search to param, Angular global API address

--- a/application/src/app/components/documents/document.add.component.html
+++ b/application/src/app/components/documents/document.add.component.html
@@ -1,5 +1,5 @@
 <div class="ui segment" style="max-height: 100%;">
-    <form class="ui form">
+    <form class="ui form" #documentAddForm="ngForm">
         <div class="ui relaxed grid">
             <div class="three column row">
                 <div class="column">
@@ -20,27 +20,29 @@
                             </div>
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': date.errors && (date.dirty || date.touched)}">
                         <label>Data wystawienia *</label>
-                        <div class="field">
-                            <input type="date" name="date" [ngModel]="document.date | date:'y-MM-dd'"  (ngModelChange)="document.date = $event">
+                        <input type="date" name="date" [ngModel]="document.date | date:'y-MM-dd'" (ngModelChange)="document.date = $event" required #date="ngModel">
+                        <div *ngIf="date.errors && (date.dirty || date.touched)" class="alert alert-danger">
+                            <small [hidden]="!date.errors.required">Data jest wymagana</small>
                         </div>
                     </div>
                     <div class="field">
                         <label>Domyślna stawka VAT</label>
-                        <div class="field">
+                        <div class="field" [ngClass]="{'error': vat.errors && (vat.dirty || vat.touched)}">
                             <div class="ui right labeled input">
-                                <input type="text" name="vat" placeholder="VAT" [(ngModel)]="document.vat">
+                                <input type="number" name="vat" placeholder="VAT" [(ngModel)]="document.vat" min="0" max="100" #vat="ngModel">
                                 <div class="ui basic label">
                                     %
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': place.errors && (place.dirty || place.touched)}">
                         <label>Miejsce *</label>
-                        <div class="field">
-                            <input type="text" name="place" placeholder="Miejsce" [(ngModel)]="document.place">
+                        <input type="text" name="place" placeholder="Miejsce" [(ngModel)]="document.place" required #place="ngModel">
+                        <div *ngIf="place.errors && (place.dirty || place.touched)" class="alert alert-danger">
+                            <small [hidden]="!place.errors.required">Miejsce jest wymagane</small>
                         </div>
                     </div>
                     <div class="field">
@@ -50,10 +52,11 @@
                 </div>
                 <div class="column">
                     <h4 class="ui dividing header">Płatność</h4>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': dateOfPayment.errors && (dateOfPayment.dirty || dateOfPayment.touched)}">
                         <label>Data płatności *</label>
-                        <div class="field">
-                            <input type="date" name="dateOfPayment" [ngModel]="document.dateOfPayment  | date:'y-MM-dd'"  (ngModelChange)="document.dateOfPayment  = $event">
+                        <input type="date" name="dateOfPayment" [ngModel]="document.dateOfPayment  | date:'y-MM-dd'" (ngModelChange)="document.dateOfPayment  = $event" required #dateOfPayment="ngModel">
+                        <div *ngIf="dateOfPayment.errors && (dateOfPayment.dirty || dateOfPayment.touched)" class="alert alert-danger">
+                            <small [hidden]="!dateOfPayment.errors.required">Data płatności jest wymagana</small>
                         </div>
                     </div>
                     <div class="field">
@@ -81,14 +84,17 @@
                             <input type="text" name="bank" placeholder="Bank" [(ngModel)]="document.bank">
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': bankAccount.errors && (bankAccount.dirty || bankAccount.touched)}">
                         <label>Numer konta</label>
                         <div class="field">
                             <div class="ui labeled input">
                                 <div class="ui label">
                                     PL
                                 </div>
-                                <input type="text" name="bankAccount" placeholder="Numer konta" [(ngModel)]="document.bankAccount">
+                                <input type="text" name="bankAccount" pattern="^\d{26}" placeholder="Numer konta" [(ngModel)]="document.bankAccount" #bankAccount="ngModel">
+                            </div>
+                            <div *ngIf="bankAccount.errors && (bankAccount.dirty || bankAccount.touched)" class="alert alert-danger">
+                                <small [hidden]="!bankAccount.errors.pattern">Podaj poprawny numer konta (26 cyfr)</small>
                             </div>
                         </div>
                     </div>
@@ -110,7 +116,7 @@
         </div>
     </form>
     <br>
-    <div class="ui  green labeled icon button" (click)="add()">
+    <button class="ui  green labeled icon button" (click)="add()" [disabled]="!documentAddForm.form.valid || !document.type || !document.paymentMethod || !document.consumerId">
         <i class="plus icon"></i> Dodaj
-    </div>
+    </button>
 </div>
