--- a/application/src/app/components/documents/document.params.component.html
+++ b/application/src/app/components/documents/document.params.component.html
@@ -13,6 +13,14 @@
     <b>Zapłacono:</b> {{ document.paid ? "Tak" : "Nie" }}
     <br>
     <b>Miejsce:</b> {{ document.place }}
+    <ng-container *ngIf="document.bank">
+        <br>
+        <b>Numer konta:</b> {{ document.bank }}
+    </ng-container>
+    <ng-container *ngIf="document.bankAccount">
+        <br>
+        <b>Numer konta:</b> PL {{ document.bankAccount }}
+    </ng-container>
 </ng-container>
 <ng-container *ngIf="edit">
     <form class="ui form">
@@ -58,6 +66,19 @@
         <div class="field">
             <label>Miejsce</label>
             <input type="text" name="place" placeholder="Miejsce" [(ngModel)]="documentEdit.place">
+        </div>
+        <div class="field">
+            <label>Bank</label>
+            <input type="text" name="bank" placeholder="Bank" [(ngModel)]="documentEdit.bank">
+        </div>
+        <div class="field">
+            <label>Numer konta</label>
+            <div class="ui labeled input">
+                <div class="ui label">
+                    PL
+                </div>
+                <input type="text" name="bankAccount" placeholder="Numer konta" [(ngModel)]="documentEdit.bankAccount">
+            </div>
         </div>
         <div class="ui  green labeled icon button" (click)="save()">
             <i class="save icon"></i> Zapisz
