--- a/application/src/app/components/registration/registration.component.html
+++ b/application/src/app/components/registration/registration.component.html
@@ -1,70 +1,103 @@
-<form class="ui form" #consumerForm="ngForm">
+<form class="ui form" #registrationForm="ngForm">
     <div class="ui two column centered grid">
         <div class="column">
             <div class="ui segment">
-                <div class="field" [ngClass]="{'error': !available}">
-                    <label>Nazwa użytkownika *</label>
+                <div class="field" [ngClass]="{'error': (!available || username.errors) && (username.dirty || username.touched)}">
+                    <label for="_username">Nazwa użytkownika *</label>
                     <div class="ui icon input" [ngClass]="{'loading': availableLoading}">
-                        <input type="text" name="_username" placeholder="Nazwa użytkownika" (keyup)="checkUsername()" [(ngModel)]="user._username">
-                        <i class="circle icon" [ngClass]="{'check': available, 'remove': !available}"></i>
+                        <input type="text" name="_username" id="username" placeholder="Nazwa użytkownika" (keyup)="checkUsername()" [(ngModel)]="user._username" required minlength="4" maxlength="24" #username="ngModel">
+                        <i class="circle icon" *ngIf="username.dirty || username.touched" [ngClass]="{'check': available && !username.errors, 'remove': !available || username.errors}"></i>
+                    </div>
+                    <div *ngIf="username.errors && (username.dirty || username.touched)" class="alert alert-danger">
+                        <small [hidden]="!username.errors.required">Nazwa użytkownika jest wymagana</small>
+                        <small [hidden]="!username.errors.minlength">Nazwa użytkownika musi mieć co najmniej 4 znaki</small>
+                        <small [hidden]="!username.errors.maxlength">Nazwa użytkownika może mieć co najwyżej 24 znaki</small>
                     </div>
                     <small [hidden]="available">Ta nazwa użytkownika jest juz zajęta</small>
                 </div>
                 <div class="field">
                     <div class="two fields">
-                        <div class="field">
+                        <div class="field" [ngClass]="{'error': password.errors && (password.dirty || password.touched)}">
                             <label>Hasło *</label>
-                            <input type="password" name="_password" placeholder="Hasło" (keyup)="matchPassword()" [(ngModel)]="user._password">
+                            <input type="password" name="_password" placeholder="Hasło" (keyup)="matchPassword()" [(ngModel)]="user._password" id="password" required minlength="6" #password="ngModel">
+                            <div *ngIf="password.errors && (password.dirty || password.touched)" class="alert alert-danger">
+                                <small [hidden]="!password.errors.required">Hasło jest wymagane</small>
+                                <small [hidden]="!password.errors.minlength">Hasło musi mieć co najmniej 6 znaków</small>
+                            </div>
                         </div>
-                        <div class="field" [ngClass]="{'error': !match}">
+                        <div class="field" [ngClass]="{'error': (!match || password.errors) && (password.dirty || password.touched)}">
                             <label>Powtórz hasło *</label>
                             <div class="ui icon input">
                                 <input type="password" name="confirmPassword" placeholder="Powtórz hasło" (keyup)="matchPassword()" [(ngModel)]="user.confirmPassword">
-                                <i class="circle icon" [ngClass]="{'check': match, 'remove': !match}"></i>
+                                <i class="circle icon" *ngIf="password.dirty || password.touched" [ngClass]="{'check': match && !password.errors, 'remove': !match || password.errors}"></i>
+                            </div>
+                            <small [hidden]="match">Hasła nie są takie same</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="field" [ngClass]="{'error': (!availableEmail || email.errors) && (email.dirty || email.touched)}">
+                    <label>Email *</label>
+                    <div class="ui icon input" [ngClass]="{'loading': availableEmailLoading}">
+                        <input type="email" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" (keyup)="checkEmail()" [(ngModel)]="user.email" required #email="ngModel">
+                        <i class="circle icon" *ngIf="email.dirty || email.touched" [ngClass]="{'check': availableEmail && !email.errors, 'remove': !availableEmail || email.errors}"></i>
+                    </div>
+                    <div *ngIf="email.errors && (email.dirty || email.touched)" class="alert alert-danger">
+                        <small [hidden]="!email.errors.required">Email jest wymagany</small>
+                        <small [hidden]="!email.errors.pattern">Podaj email w poprawnym formacie</small>
+                    </div>
+                    <small [hidden]="availableEmail">Użytkownik o tym emailu już istnieje</small>
+                </div>
+                <div class="field" [ngClass]="{'error': company.errors && (company.dirty || company.touched)}">
+                    <label>Firma *</label>
+                    <input type="text" name="company" id="company" placeholder="Firma" [(ngModel)]="user.company" required #company="ngModel">
+                    <div *ngIf="company.errors && (company.dirty || company.touched)" class="alert alert-danger">
+                        <small [hidden]="!company.errors.required">Nazwa firmy jest wymagana</small>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="two fields">
+                        <div class="field" [ngClass]="{'error': firstName.errors && (firstName.dirty || firstName.touched)}">
+                            <label>Imie *</label>
+                            <input type="text" name="firstName" placeholder="Imie" [(ngModel)]="user.firstName" required #firstName="ngModel">
+                            <div *ngIf="firstName.errors && (firstName.dirty || firstName.touched)" class="alert alert-danger">
+                                <small [hidden]="!firstName.errors.required">Imię jest wymagane</small>
+                            </div>
+                        </div>
+                        <div class="field" [ngClass]="{'error': lastName.errors && (lastName.dirty || lastName.touched)}">
+                            <label>Nazwisko *</label>
+                            <input type="text" name="lastName" placeholder="Nazwisko" [(ngModel)]="user.lastName" required #lastName="ngModel">
+                            <div *ngIf="lastName.errors && (lastName.dirty || lastName.touched)" class="alert alert-danger">
+                                <small [hidden]="!lastName.errors.required">Nazwisko jest wymagane</small>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="field" [ngClass]="{'error': !availableEmail}">
-                    <label>Email *</label>
-                    <div class="ui icon input" [ngClass]="{'loading': availableEmailLoading}">
-                        <input type="text" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" (keyup)="checkEmail()" [(ngModel)]="user.email">
-                        <i class="circle icon" [ngClass]="{'check': availableEmail, 'remove': !availableEmail}"></i>
-                    </div>
-                    <small [hidden]="availableEmail">Użytkownik o tym emailu już istnieje</small>
-                </div>
-                <div class="field">
-                    <label>Firma *</label>
-                    <input type="text" name="company" id="company" placeholder="Firma" [(ngModel)]="user.company">
-                </div>
                 <div class="field">
                     <div class="two fields">
-                        <div class="field">
-                            <label>Imie *</label>
-                            <input type="text" name="firstName" placeholder="Imie" [(ngModel)]="user.firstName">
-                        </div>
-                        <div class="field">
-                            <label>Nazwisko *</label>
-                            <input type="text" name="lastName" placeholder="Nazwisko" [(ngModel)]="user.lastName">
-                        </div>
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="two fields">
-                        <div class="field">
+                        <div class="field" [ngClass]="{'error': nip.errors && (nip.dirty || nip.touched)}">
                             <label>NIP *</label>
-                            <input type="text" name="nip" placeholder="NIP" [(ngModel)]="user.nip">
+                            <input type="text" name="nip" pattern="^\d{3}-\d{3}-\d{2}-\d{2}|\d{3}-\d{2}-\d{2}-\d{3}$" placeholder="NIP" [(ngModel)]="user.nip" required #nip="ngModel">
+                            <div *ngIf="nip.errors && (nip.dirty || nip.touched)" class="alert alert-danger">
+                                <small [hidden]="!nip.errors.required">NIP jest wymagany</small>
+                                <small [hidden]="!nip.errors.pattern">Podaj poprawny format NIP</small>
+                            </div>
                         </div>
-                        <div class="field">
+                        <div class="field" [ngClass]="{'error': regon.errors && (regon.dirty || regon.touched)}">
                             <label>REGON</label>
-                            <input type="text" name="pesel" placeholder="REGON" [(ngModel)]="user.regon">
+                            <input type="text" name="regon" placeholder="REGON" pattern="^\d{9}$" [(ngModel)]="user.regon" #regon="ngModel">
+                            <div *ngIf="regon.errors && (regon.dirty || regon.touched)" class="alert alert-danger">
+                                <small [hidden]="!regon.errors.pattern">Podaj poprawny format REGON</small>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="fields">
-                    <div class="ten wide field">
+                    <div class="ten wide field" [ngClass]="{'error': street.errors && (street.dirty || street.touched)}">
                         <label>Ulica *</label>
-                        <input type="text" name="street" required id="street" placeholder="Ulica" [(ngModel)]="user.street">
+                        <input type="text" name="street" required id="street" placeholder="Ulica" [(ngModel)]="user.street" #street="ngModel">
+                        <div *ngIf="street.errors && (street.dirty || street.touched)" class="alert alert-danger">
+                            <small [hidden]="!street.errors.required">NIP jest wymagany</small>
+                        </div>
                     </div>
                     <div class="three wide field">
                         <label>Budynek</label>
@@ -76,16 +109,23 @@
                     </div>
                 </div>
                 <div class="fields">
-                    <div class="five wide field">
+                    <div class="five wide field" [ngClass]="{'error': postalCode.errors && (postalCode.dirty || postalCode.touched)}">
                         <label>Kod pocztowy *</label>
-                        <input type="text" name="postalCode" required placeholder="Kod pocztowy" [(ngModel)]="user.postalCode">
+                        <input type="text" name="postalCode" required pattern="[0-9]{2}\-[0-9]{3}" placeholder="Kod pocztowy" [(ngModel)]="user.postalCode" #postalCode="ngModel">
+                        <div *ngIf="postalCode.errors && (postalCode.dirty || postalCode.touched)" class="alert alert-danger">
+                            <small [hidden]="!postalCode.errors.required">NIP jest wymagany</small>
+                            <small [hidden]="!postalCode.errors.pattern">Podaj poprawny format kodu</small>
+                        </div>
                     </div>
-                    <div class="eleven wide field">
+                    <div class="eleven wide field" [ngClass]="{'error': place.errors && (place.dirty || place.touched)}">
                         <label>Miejscowość *</label>
-                        <input type="text" name="place" placeholder="Miejscowość" required [(ngModel)]="user.place">
+                        <input type="text" name="place" placeholder="Miejscowość" required [(ngModel)]="user.place" #place="ngModel">
+                        <div *ngIf="place.errors && (place.dirty || place.touched)" class="alert alert-danger">
+                            <small [hidden]="!place.errors.required">Miejscowość jest wymagana</small>
+                        </div>
                     </div>
                 </div>
-                <button class="ui button" (click)="register()">
+                <button class="ui button" [disabled]="!registrationForm.form.valid || !available || !availableEmail" (click)="register()">
                     Zarejestruj
                 </button>
             </div>
